// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageCard > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`PageCard > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">Body slot</div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] rounded-xl">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>Default slot
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="page-card-body" class="flex-1">
        <!--v-if-->
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description slot</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <div data-slot="page-card-footer" class="pt-4 mt-auto">Footer slot</div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <div data-slot="page-card-header" class="mb-4">Header slot</div>
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color error correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-error)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color info correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-info)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color neutral correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-neutral)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color neutral correctly 2`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-neutral)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color primary correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color secondary correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-secondary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color success correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-success)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color warning correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-warning)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with icon correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5">Leading slot</div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 lg:grid-cols-2 lg:items-center">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 lg:grid-cols-2 lg:items-center">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start order-last">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation vertical reverse correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start order-last">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color error correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-error)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color info correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-info)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color neutral correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-neutral)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color neutral correctly 2`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-neutral)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color primary correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color secondary correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-secondary)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color success correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-success)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color warning correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-warning)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <div data-slot="page-card-spotlight" class="absolute inset-0 rounded-[inherit] pointer-events-none bg-default/90"></div>
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title slot</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] hover:bg-elevated/50 has-[>a:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <!--v-if-->
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Card link" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty text-highlighted font-bold">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant ghost correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant ghost highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant ghost to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] hover:bg-elevated/50">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant naked correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-0 sm:p-0">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant naked highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-0 sm:p-0">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant naked to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-0 sm:p-0">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-default ring ring-default outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] hover:bg-elevated/50 has-[>a:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-elevated/50 [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant soft highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-elevated/50 ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant soft to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-elevated/50 outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] hover:bg-elevated">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-inverted text-inverted [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-inverted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-dimmed mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant solid highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-inverted text-inverted ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-inverted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-dimmed mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant solid to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-inverted text-inverted outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] hover:bg-inverted/90">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-inverted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-dimmed mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-elevated/50 ring ring-default [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant subtle highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-elevated/50 ring-2 ring-accent [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)]">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant subtle to correctly 1`] = `
"<div data-orientation="vertical" data-slot="page-card" class="relative flex rounded-lg bg-elevated/50 ring ring-default outline-primary/25 has-[>a:focus-visible]:outline-3 transition [--ui-accent:var(--ui-primary)] [--spotlight-color:var(--ui-primary)] hover:bg-elevated hover:ring-accented has-[>a:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="page-card-container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="page-card-wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="page-card-leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="page-card-leadingIcon" class="size-5 shrink-0 text-primary"></svg></div>
      <div data-slot="page-card-body" class="flex-1">
        <div data-slot="page-card-title" class="text-base text-pretty font-semibold text-highlighted">Title</div>
        <div data-slot="page-card-description" class="text-[15px] text-pretty text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;
